Agregando nuevas características

--- a/.env.example
+++ b/.env.example
@@ -10,9 +10,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=gallerybd
+DB_DATABASE=galleriadb
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=root
 
 CLOUDINARY_CLOUD_NAME=lab08tec
 CLOUDINARY_API_KEY=687262165794592
